[package]
name = "ruwren"
version = "0.4.4"
authors = ["Jengamon <bob.hostern@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jengamon/ruwren"
homepage = "http://wren.io"
keywords = ["wren", "scripting", "embed"]
description = "Rusty bindings to Wren programming language"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "ruwren_macros"]

[dependencies]
ruwren-sys = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "embed_bench"
harness = false
