[package]
name = "ruwren"
version = { workspace = true }
authors = ["Jengamon <bob.hostern@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jengamon/ruwren"
homepage = "http://wren.io"
keywords = ["wren", "scripting", "embed"]
description = "Rusty bindings to Wren programming language"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "ruwren_macros"]
package.version = "0.4.5"

[dependencies]
cstr_core = "0.2.6"
ruwren-sys = "^0.4"
ruwren_macros = { version = "^0.4", path = "ruwren_macros", optional = true }

[features]
default = ["derive"]
derive = ["dep:ruwren_macros"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "embed_bench"
harness = false
