[package]
name = "ruwren-macros"
version = { workspace = true }
edition = "2021"
description = "Proc-macros for ruwren"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jengamon/ruwren"
homepage = "http://wren.io"
keywords = ["wren", "scripting", "embed", "ruwren", "proc-macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
deluxe = "0.5.0"
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full", "visit"] }
