[package]
name = "ruwren-macros"
version = { workspace = true }
edition = "2021"
description = "Proc-macros for ruwren"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jengamon/ruwren"
homepage = "http://wren.io"
keywords = ["wren", "scripting", "embed", "ruwren", "proc-macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
deluxe = "0.5.0"
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = { version = "2.0.109", features = ["full", "visit"] }
