[package]
name = "ruwren-sys"
version = { workspace = true }
authors = ["Jengamon <bob.hostern@gmail.com>"]
edition = "2018"
build = "build.rs"
links = "wren"
description = "Low-level bindings to Wren programming language. Not affiliated with the main team for Wren."
license = "MIT"
repository = "https://github.com/Jengamon/ruwren"
homepage = "http://wren.io"
keywords = ["wren", "scripting", "embed", "ruwren"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wren_sys"
path = "lib.rs"

[build-dependencies]
cc = "1.0"
glob = "0.3"
bindgen = "0.69"

[dependencies]
libc = "0.2"
